; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-hashmap.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-hashmap.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [45 x i8] c"/************ non-shared tests ************/\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = call i32 (...) @log_parse_environment()
  %7 = call i32 (...) @log_open()
  %8 = call i32 (...) @test_hashmap_funcs()
  %9 = call i32 (...) @test_ordered_hashmap_funcs()
  %10 = call i32 @log_info(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 (...) @test_ordered_hashmap_next()
  %12 = call i32 (...) @test_uint64_compare_func()
  %13 = call i32 (...) @test_trivial_compare_func()
  %14 = call i32 (...) @test_string_compare_func()
  %15 = call i32 (...) @test_iterated_cache()
  ret i32 0
}

declare dso_local i32 @log_parse_environment(...) #1

declare dso_local i32 @log_open(...) #1

declare dso_local i32 @test_hashmap_funcs(...) #1

declare dso_local i32 @test_ordered_hashmap_funcs(...) #1

declare dso_local i32 @log_info(i8*) #1

declare dso_local i32 @test_ordered_hashmap_next(...) #1

declare dso_local i32 @test_uint64_compare_func(...) #1

declare dso_local i32 @test_trivial_compare_func(...) #1

declare dso_local i32 @test_string_compare_func(...) #1

declare dso_local i32 @test_iterated_cache(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
